manifests/hub-core-services/infisical/namespace-hub-platform-data.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-data
  labels:
    name: platform-data
    topology.platform.io/role: hub
